--- a/tox.ini
+++ b/tox.ini
@@ -11,6 +11,7 @@ setenv =
 [flake8]
 max-line-length = 88
 select = C,E,F,W,B,T
+ignore = W503
 per-file-ignores =
     __init__.py: F401
     tasks.py: T001
